hphp/test/slow/expr-tree-pipe-capture-error-2.php.expectf

Fatal error: Pipe variables must occur only in the RHS of pipe expressions in %s/expr-tree-pipe-capture-error-2.php on line 5
